dark mode bug fix

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -30,8 +30,7 @@
   --ion-color-text: #ffffff;
   --ion-text-color: var(--ion-color-text);
 
-  --ion-color-light: #f4f5f8;
-  --ion-color-dark: #222428;
+
 
   --ion-color-success: #28A745;
   --ion-color-danger: #FF3C3C;
